# buybuyalert

./: .env.example  .gitignore  README.md  start.sh
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4d5699376608_initial_tables.py
backend/app/: config.py  database.py  main.py  models.py  scheduler.py  schemas.py
backend/app/routers/: alerts.py  dashboard.py  notifications.py  products.py
backend/app/scrapers/: amazon.py  base.py  registry.py
backend/app/services/: alert_service.py  email_service.py  notification_service.py  product_service.py  scraper_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AlertForm.tsx  AlertList.tsx  NotificationList.tsx  PriceHistoryChart.tsx  ProductCard.tsx
frontend/src/pages/: AddProduct.tsx  Alerts.tsx  Dashboard.tsx  ProductDetail.tsx
frontend/src/types/: index.ts
